tests/negative/gold/import1_test.gold
tests/negative/import1_test.toit:3:24: error: Name clash with toplevel declaration 'foo'
import .import1_a show foo
                       ^~~
tests/negative/import1_test.toit:5:1: note: Toplevel declaration of 'foo'
foo:
^~~
Compilation failed.
